Finished prior distributions section Updated differential corrections section to use best DC solution parameters

--- a/Apendice/GaiaADQL.tex
+++ b/Apendice/GaiaADQL.tex
@@ -1,6 +1,6 @@
-\chapter{Gaia ADQL Queries} \label{apendice:gaiaAdql}
+\chapter{Gaia ADQL Query} \label{apendice:gaiaAdql}
 
-\section{DR3} \label{apendice:gaiaAdql:dr3}
+\section{DR3}
 \begin{lstlisting}[ language=SQL,
 	deletekeywords={IDENTITY},
 	deletekeywords={[2]INT},
