--- a/Tesis.tex
+++ b/Tesis.tex
@@ -414,6 +414,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Appendix
 \appendix
 \input{Apendice/GaiaADQL.tex}
+\input{Apendice/ModeloComputacionalGraficasAdicionales.tex}
 %-------------------------------------REFERENCES
 \chapter*{Agradecimientos}
 This work has made use of data from the European Space Agency (ESA) mission
