First draft of Modelo Computacional chapter finished

--- a/Apendice/ModeloComputacionalGraficasAdicionales.tex
+++ b/Apendice/ModeloComputacionalGraficasAdicionales.tex
@@ -13,3 +13,18 @@
     \href{https://github.com/KnightIV/UANL_MAPTA_Observaciones/blob/main/analisis/phoebe_model/sampling/updated-data-mcmc-sampling.ipynb}{\code{updated-data-mcmc-sampling.ipynb}}.}
     \label{figuraPhoebePrioresCombinadasZtf}
 \end{figure}
+
+\section{Distribuciones de Densidad de Probabilidad Completas} \label{apendice:modelo_computacional_graficas:resultados_pdfs_completas}
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[scale=0.3]{Apendice/Figures/Figura MCMC ZTF Resultados Completos.png}
+    \caption{Resultados completos del muestreo MCMC utilizando los datos de ZTF.
+    Aquí se incluye el parámetro de molestia \code{pblum@primary@lcZtfG}, el
+    cual representa la luminosidad en la pasabanda ZTF:g de la componente
+    primaria, utilizada como el factor de escala para la curva de luz de ZTF:g y
+    la temperatura efectiva del sistema reflejada por la curva de ZTF:r. Se
+    puede apreciar la correlación lineal entre la razón de masa $q$ y la
+    luminosidad de pasabanda.}
+    \label{figuraPhoebeMcmcResultadosCompletos}
+\end{figure}
