--- a/Introduccion/Phoebe.tex
+++ b/Introduccion/Phoebe.tex
@@ -970,7 +970,7 @@ distribución posterior. Un esquema de este proceso se presenta en la
 	\label{figuraMcmcMuestreoImportancia}
 \end{figure}
 
-\subsubsection{\code{emcee}: MCMC en Python}
+\subsubsection{\code{emcee}: MCMC en Python} \label{intro:phoebe:problema_inverso:muestreo:emcee}
 
 Las \textbf{cadenas de Markov de Monte Carlo} (conocidas por sus siglas en
 inglés \textbf{MCMC}) generan muestras de la distribución a priori formando
