--- a/Observaciones/Secciones/Observatorio.tex
+++ b/Observaciones/Secciones/Observatorio.tex
@@ -17,7 +17,8 @@ número $f/6.8$. Este telescopio de diseño \textit{Dall-Kirkham corregido} cuen
 con un grupo de lentes frente al espejo esférico secundario, el cual resta los
 efectos de la aberración esférica presente en otras configuraciones de espejos
 primarios y secundarios, resultando en una imagen más nítida. Este instrumento,
-combinado con una montura ecuatorial \textbf{Orion HDX110}, nos permite una
+combinado con una montura ecuatorial \textbf{Astro-Physics 1600
+GTO}\footnote{\myurl{https://www.astro-physics.com/1600gto}}, nos permite una
 vista clara de la bóveda celeste a \ang{30} arriba del horizonte, con capacidad
 de observar objetos tenues hasta de 17 magnitudes variando la configuración de
 las exposiciones.
